<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">Unknown</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="fingerprint_icon_content_description">Fingerprint icon</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_mobile_hotspot_provision_app_no_ui" />
    <string name="config_mobile_hotspot_provision_response" />
    <string name="config_wifi_tether_enable">com.android.settings/.TetherService</string>
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="config_wifi_random_mac_oui">DA-A1-19</string>
    <string name="config_wifi_framework_sap_2G_channel_list">1,6,11</string>
    <string name="config_orientationSensorType">@null</string>
    <string name="widget_default_package_name">net.nurik.roman.dashclock</string>
    <string name="widget_default_class_name">com.google.android.apps.dashclock.WidgetProvider</string>
    <string name="config_iccHotswapPromptForRestartDialogComponent">@null</string>
    <string name="default_wallpaper_component">@null</string>
    <string name="image_wallpaper_component">com.android.systemui/com.android.systemui.ImageWallpaper</string>
    <string name="config_networkLocationProviderPackageName">@null</string>
    <string name="config_fusedLocationProviderPackageName">com.android.location.fused</string>
    <string name="config_hardwareFlpPackageName">com.android.location.fused</string>
    <string name="config_geocoderProviderPackageName">@null</string>
    <string name="config_geofenceProviderPackageName">@null</string>
    <string name="config_activityRecognitionHardwarePackageName">@null</string>
    <string name="config_datause_iface">rmnet_usb0</string>
    <string name="default_sms_application">com.android.messaging</string>
    <string name="default_browser" />
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="mobile_provisioning_apn" />
    <string name="mobile_provisioning_url" />
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_mms_user_agent" />
    <string name="config_mms_user_agent_profile_url" />
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">2.android.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
    <string name="config_ethernet_tcp_buffers">524288,1048576,3145728,524288,1048576,2097152</string>
    <string name="config_wifi_tcp_buffers">524288,2097152,4194304,262144,524288,1048576</string>
    <string name="config_chooseAccountActivity">android/android.accounts.ChooseAccountActivity</string>
    <string name="config_chooseTypeAndAccountActivity">android/android.accounts.ChooseTypeAndAccountActivity</string>
    <string name="config_customResolverActivity" />
    <string name="config_customAdbPublicKeyConfirmationComponent">com.android.systemui/com.android.systemui.usb.UsbDebuggingActivity</string>
    <string name="config_customAdbPublicKeyConfirmationSecondaryUserComponent">com.android.systemui/com.android.systemui.usb.UsbDebuggingSecondaryUserActivity</string>
    <string name="config_customVpnConfirmDialogComponent">com.android.vpndialogs/com.android.vpndialogs.ConfirmDialog</string>
    <string name="config_appsAuthorizedForSharedAccounts">;com.android.settings;</string>
    <string name="config_defaultNetworkScorerPackageName" />
    <string name="config_persistentDataPackageName" />
    <string name="config_webViewPackageName">com.android.webview</string>
    <string name="config_alternateWebViewPackageName">com.google.android.webview</string>
    <string name="prohibit_manual_network_selection_in_gobal_mode">false</string>
    <string name="config_keyguardComponent">com.android.systemui/com.android.systemui.keyguard.KeyguardService</string>
    <string name="config_forceVoiceInteractionServicePackage" />
    <string name="config_radio_access_family">GSM | WCDMA | LTE | CDMA | EVDO</string>
    <string name="config_cameraLaunchGestureSensorStringType" />
    <string name="config_networkPolicyNotificationComponent" />
    <string name="config_packagedKeyboardName" />
    <string name="config_deviceKeyHandlerLib">/system/app/Find7Parts/Find7Parts.apk</string>
    <string name="config_deviceKeyHandlerClass">org.omnirom.device.KeyHandler</string>
    <string name="global_action_reboot">Reboot</string>
    <string name="global_action_reboot_more">Reboot…</string>
    <string name="global_action_reboot_sub">System</string>
    <string name="global_action_reboot_recovery">Recovery</string>
    <string name="global_action_reboot_bootloader">Bootloader</string>
    <string name="global_action_users">Users…</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="global_action_screenrecord">Screenrecord</string>
    <string name="global_action_torch_on">Flashlight is ON</string>
    <string name="global_action_torch_off">Flashlight is OFF</string>
    <string name="global_actions_toggle_torch_mode">Flashlight</string>
    <string name="reboot_to_bootloader_title">Reboot bootloader</string>
    <string name="reboot_to_bootloader_message">Rebooting…</string>
    <string name="reboot_to_recovery_title">Reboot recovery</string>
    <string name="reboot_to_recovery_message">Rebooting…</string>
    <string name="reboot_system_title">Reboot system</string>
    <string name="reboot_system_message">Rebooting…</string>
    <string name="dnd_mode_off">Off</string>
    <string name="dnd_mode_total_silence">Total silence</string>
    <string name="dnd_mode_alarms">Alarms only</string>
    <string name="dnd_mode_important">Priority only</string>
    <string name="app_killed_message">App killed</string>
    <string name="hide_lock_to_app_dialog">Always start</string>
    <string name="reboot_title">Reboot</string>
    <string name="reboot_confirm">Do you want to reboot?</string>
    <string name="battery_style_text">Text only</string>
    <string name="battery_style_default">Default</string>
    <string name="battery_style_meter_horizontal">Horizontal bar</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_droid">Droid</string>
    <string name="permlab_fakePackageSignature">Spoof package signature</string>
    <string name="permdesc_fakePackageSignature">Allows the app to pretend to be a different app. Malicious applications might be able to use this to access private application data. Grant this permission with caution only!</string>
    <string name="permlab_setKeyguardWallpaper">set keyguard wallpaper</string>
    <string name="permdesc_setKeyguardWallpaper">Allows an app to change the lock screen wallpaper.</string>
    <string name="lock_to_app_toast_back">To unpin this screen, touch and hold Back.</string>
    <string name="system_error_vendorprint">It appears your vendor image may be out of date. Please flash the latest vendor image for your device.</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="lock_pattern_view_aspect">square</string>
    <string name="icu_abbrev_wday_month_day_no_year">eeeMMMMd</string>
    <string name="system_ui_date_pattern">@string/icu_abbrev_wday_month_day_no_year</string>
    <string name="font_family_display_4_material">sans-serif-light</string>
    <string name="font_family_display_3_material">sans-serif</string>
    <string name="font_family_display_2_material">sans-serif</string>
    <string name="font_family_display_1_material">sans-serif</string>
    <string name="font_family_headline_material">sans-serif</string>
    <string name="font_family_title_material">sans-serif-medium</string>
    <string name="font_family_subhead_material">sans-serif</string>
    <string name="font_family_menu_material">sans-serif</string>
    <string name="font_family_body_2_material">sans-serif-medium</string>
    <string name="font_family_body_1_material">sans-serif</string>
    <string name="font_family_caption_material">sans-serif</string>
    <string name="font_family_button_material">sans-serif-medium</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s %2$s</string>
    <string name="durationDays">%1$d days</string>
    <string name="durationDayHours">%1$d day %2$d hrs</string>
    <string name="durationDayHour">%1$d day %2$d hr</string>
    <string name="durationHours">%1$d hrs</string>
    <string name="durationHourMinutes">%1$d hr %2$d mins</string>
    <string name="durationHourMinute">%1$d hr %2$d min</string>
    <string name="durationMinutes">%1$d mins</string>
    <string name="durationMinute">%1$d min</string>
    <string name="durationMinuteSeconds">%1$d min %2$d secs</string>
    <string name="durationMinuteSecond">%1$d min %2$d sec</string>
    <string name="durationSeconds">%1$d secs</string>
    <string name="durationSecond">%1$d sec</string>
    <string name="mmiError">Connection problem or invalid MMI code.</string>
    <string name="mmiFdnError">Operation is restricted to fixed dialing numbers only.</string>
    <string name="serviceEnabled">Service was enabled.</string>
    <string name="serviceEnabledFor">Service was enabled for:</string>
    <string name="serviceDisabled">Service has been disabled.</string>
    <string name="silent_mode_silent">Ringer off</string>
    <string name="silent_mode_vibrate">Ringer vibrate</string>
    <string name="silent_mode_ring">Ringer on</string>
</resources>