<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="?actionBarItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeight" android:paddingStart="12.0dip" android:paddingEnd="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/option1" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_silent">
        <ImageView android:layout_gravity="center" android:background="@drawable/global_action_indicator_ring" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_global_audio_ring_notif_mute" android:scaleType="center" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:id="@id/option2" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_vibrate">
        <ImageView android:layout_gravity="center" android:background="@drawable/global_action_indicator_ring" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_global_audio_ring_notif_vibrate" android:scaleType="center" />
    </LinearLayout>
    <View android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
    <LinearLayout android:id="@id/option3" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:contentDescription="@string/silent_mode_ring">
        <ImageView android:layout_gravity="center" android:background="@drawable/global_action_indicator_ring" android:duplicateParentState="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_global_audio_ring_notif" android:scaleType="center" />
    </LinearLayout>
</LinearLayout>